--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="./css/style.css" />
+    </head>
     <body>
         Hello world
     </body>
