--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./css/style.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
     </head>
     <body>
         Hello world
